{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 19,
  "lineage": "4aed36c1-0279-a6d9-4ee8-200753737754",
  "resources": [
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:358421854149:instance/i-022fed52eecf8a1f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022fed52eecf8a1f0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d9ec959655792128",
            "private_dns": "ip-172-31-24-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.220",
            "public_dns": "ec2-54-87-41-70.compute-1.amazonaws.com",
            "public_ip": "54.87.41.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094729f1b9a8738f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-california-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07985f8bd726e9a72",
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0372760b82990697f"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358421854149:security-group/sg-0372760b82990697f",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-0372760b82990697f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-california-ec2-sg",
            "name_prefix": "",
            "owner_id": "358421854149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c969f668dad4d6d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:358421854149:instance/i-0a1ee360add36a3b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1ee360add36a3b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0416a32c50cc89102",
            "private_dns": "ip-172-31-27-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.74",
            "public_dns": "ec2-54-90-151-136.compute-1.amazonaws.com",
            "public_ip": "54.90.151.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0970c74f36c68bff6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-florida-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07985f8bd726e9a72",
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0217b4be15dbf6141"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358421854149:security-group/sg-0217b4be15dbf6141",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-0217b4be15dbf6141",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-florida-ec2-sg",
            "name_prefix": "",
            "owner_id": "358421854149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c969f668dad4d6d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:358421854149:instance/i-057402b61aeadfeb5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057402b61aeadfeb5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f783a38f3235878d",
            "private_dns": "ip-172-31-27-213.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.27.213",
            "public_dns": "ec2-54-235-13-73.compute-1.amazonaws.com",
            "public_ip": "54.235.13.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0885a7acf2bc0fcef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-texas-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07985f8bd726e9a72",
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0c56c679d51f622"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"texas\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:358421854149:security-group/sg-0c0c56c679d51f622",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [],
            "id": "sg-0c0c56c679d51f622",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "humangov-texas-ec2-sg",
            "name_prefix": "",
            "owner_id": "358421854149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-texas"
            },
            "tags_all": {
              "Name": "humangov-texas"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c969f668dad4d6d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}